# flower_backend

./: .gitignore  Cargo.toml
migrations/: 20240719_1_create_tables.sql  20240720052313_create_tables.sql
src/: main.rs  routes.rs
src/models/: dependency.rs  group.rs  group_user_mapping.rs  mod.rs  pm_worker_mapping.rs  project.rs  project_manager.rs  session.rs  tag.rs  tag_project_mapping.rs  task.rs  user.rs  worker.rs
src/routes/: mod.rs  routes.rs
src/routes/admin/: admin_handlers.rs  admin_models.rs  mod.rs
src/routes/group_selection/: group_selection_handlers.rs  group_selection_models.rs  mod.rs
src/routes/group_view/: group_view_handlers.rs  group_view_models.rs  mod.rs
src/routes/login/: login_handlers.rs  login_models.rs  login_routes.rs  mod.rs
src/routes/project_view/: mod.rs  project_view_handlers.rs  project_view_models.rs
