[package]
name = "flower_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["chrono", "macros", "mysql", "runtime-tokio-rustls", "time"] }
tokio = { version = "1.38.1", features = ["full"] }
